--- a/doc/formulas.dox
+++ b/doc/formulas.dox
@@ -111,7 +111,7 @@ The second command should valid text-mode commands that also work in math-mode w
 \ref cfg_use_mathjax "USE_MATHJAX".
 For the fourth command the section should contain valid command for the specific environment.
 
-\warning Currently, doxygen is not very fault tolerant in recovering 
+\warning Currently, Doxygen is not very fault tolerant in recovering 
 from typos in formulas. It may be necessary to remove the
 files <code>formula.repository</code> that are written to the html, rtf etc. directories to 
 get rid of an incorrect formula as well as the <code>form_*</code> files.
