--- a/doc/arch.dox
+++ b/doc/arch.dox
@@ -20,7 +20,7 @@
 
 <B>Note that this section is still under construction!</B>
 
-The following picture shows how source files are processed by doxygen.
+The following picture shows how source files are processed by Doxygen.
 
 \image html  archoverview.svg "Data flow overview"
 \image latex archoverview.eps "Data flow overview" width=14cm
@@ -33,7 +33,7 @@ The configuration file that controls the settings of a project is parsed
 and the settings are stored in the singleton class \c Config
 in <code>src/config.h</code>. The parser itself is written using \c flex
 and can be found in <code>src/config.l</code>. This parser is also used
-directly by \c doxywizard, so it is put in a separate library.
+directly by Doxywizard, so it is put in a separate library.
 
 Each configuration option has one of 5 possible types: \c String,
 \c List, \c Enum, \c Int, or \c Bool. The values of these options are
@@ -61,7 +61,7 @@ Another difference is that the preprocessor parses, but not actually includes
 code when it encounters a \c \#include (with the exception of \c \#include
 found inside { ... } blocks). The reasons behind this deviation from
 the standard is to prevent feeding multiple definitions of the
-same functions/classes to doxygen's parser. If all source files would
+same functions/classes to Doxygen's parser. If all source files would
 include a common header file for instance, the class and type
 definitions (and their documentation) would be present in each
 translation unit.
@@ -115,7 +115,7 @@ on the tree of entries, built during language parsing. Look at the
 "Gathering information" part of \c parseInput() for details.
 
 The result of this step is a number of dictionaries, which can be
-found in the doxygen "namespace" defined in \c src/doxygen.h. Most
+found in the Doxygen "namespace" defined in \c src/doxygen.h. Most
 elements of these dictionaries are derived from the class \c Definition;
 The class \c MemberDef, for instance, holds all information for a member.
 An instance of such a class can be part of a file ( class \c FileDef ),
@@ -161,7 +161,7 @@ declared in \c src/code.h.
 
 <h3>Output generators</h3>
 
-After data is gathered and cross-referenced, doxygen generates
+After data is gathered and cross-referenced, Doxygen generates
 output in various formats. For this it uses the methods provided by
 the abstract class \c OutputGenerator. In order to generate output
 for multiple formats at once, the methods of \c OutputList are called
@@ -187,7 +187,7 @@ could extract information from the XML output. Possible tools could be:
 
 <h3>Debugging</h3>
 
-Since doxygen uses a lot of \c flex code it is important to understand
+Since Doxygen uses a lot of \c flex code it is important to understand
 how \c flex works (for this one should read the \c man page)
 and to understand what it is doing when \c flex is parsing some input.
 Fortunately, when \c flex is used with the `-d` option it outputs what rules
@@ -242,14 +242,14 @@ utime $now, $now, $file;
 Another way to get rules matching / debugging information
 from the \c flex code is setting \c LEX_FLAGS with \c make (`make LEX_FLAGS=-d`).
 
-By default a debug version of doxygen (i.e. an executable created with the \c CMake
+By default a debug version of Doxygen (i.e. an executable created with the \c CMake
 setting `-DCMAKE_BUILD_TYPE=Debug`) will automatically have the \c flex debugging
 information for all `flex codefile`s.
 
-Note that by running doxygen with `-d lex` you get information about which
+Note that by running Doxygen with `-d lex` you get information about which
 `flex codefile` is used.
 To see the information of the flex parser, which is compiled with the flex debug option,
-you have to specify `-d lex:<flex codefile>` when running doxygen.
+you have to specify `-d lex:<flex codefile>` when running Doxygen.
 
 Note that the information with respect to the lex parsing goes to `stderr` and that the other
 debug output goes by default to `stdout` unless one uses `-d stderr`.
@@ -268,8 +268,8 @@ Studio projects), e.g. `setenv TEST_FLAGS "--id 5 --id 7"` and `make tests`.
 <h3>Doxyfile differences</h3>
 
 In case one has to communicate through e.g. a forum the configuration settings that
-are different from the standard doxygen configuration file settings one can run the
-doxygen command: with the `-x` option and the name of the configuration file (default
+are different from the standard Doxygen configuration file settings one can run the
+Doxygen command: with the `-x` option and the name of the configuration file (default
 is `Doxyfile`). The output will be a list of the not default settings (in `Doxyfile`
 format). Alternatively also `-x_noenv` is possible which is identical to the `-x`
 option but without replacing the environment variables and the \c CMake type replacement variables.
