--- a/doc/faq.dox
+++ b/doc/faq.dox
@@ -48,7 +48,7 @@ You should use the \ref cmdmainpage "\\mainpage" command inside a comment block 
       to make them appear in the documentation.
   <li>Is there a function macro in your class that does not end with a
       semicolon (e.g. MY_MACRO())? If so then you have to instruct
-      doxygen's preprocessor to remove it.
+      Doxygen's preprocessor to remove it.
 
       This typically boils down to the following settings in the configuration file:
 
@@ -84,25 +84,25 @@ and that match a specified extension (mentioned in \ref cfg_file_patterns "FILE_
 The list of files is then reduced by excluding files listed as \ref cfg_exclude "EXCLUDE" or
 files that match the patterns set by \ref cfg_exclude_patterns "EXCLUDE_PATTERNS".
 
-In the past doxygen parsed all files with an unknown extension as C files which could lead to
-undesired results. Since version 1.8.8, doxygen requires that you specify a mapping that tells
+In the past Doxygen parsed all files with an unknown extension as C files which could lead to
+undesired results. Since version 1.8.8, Doxygen requires that you specify a mapping that tells
 for a certain file extension, which parser to use.
 This mapping is specified using the \ref cfg_extension_mapping "EXTENSION_MAPPING" tag.
 If no mapping is specified the file's contents will be ignored.
 
-\section faq_code How can I make doxygen ignore some code fragment?
+\section faq_code How can I make Doxygen ignore some code fragment?
 
 The new and easiest way is to add one comment block
 with a \ref cmdcond "\\cond" command at the start and one comment block
 with a \ref cmdendcond "\\endcond" command at the end of the piece of
 code that should be ignored. This should be within the same file of course.
 
-But you can also use doxygen's preprocessor for this:
+But you can also use Doxygen's preprocessor for this:
 If you put
 \verbatim
 #ifndef DOXYGEN_SHOULD_SKIP_THIS
 
- /* code that must be skipped by doxygen */
+ /* code that must be skipped by Doxygen */
 
 #endif /* DOXYGEN_SHOULD_SKIP_THIS */
 \endverbatim
@@ -110,7 +110,7 @@ around the blocks that should be hidden and put:
 \verbatim
   PREDEFINED = DOXYGEN_SHOULD_SKIP_THIS
 \endverbatim
-in the configuration file then all blocks should be skipped by doxygen as long
+in the configuration file then all blocks should be skipped by Doxygen as long
 as \ref cfg_enable_preprocessing "ENABLE_PREPROCESSING" is set to `YES`.
 
 \section faq_code_inc How can I change what is after the \#include in the class documentation?
@@ -127,7 +127,7 @@ You can also document your class as follows
  */
 \endverbatim
 
-To make doxygen put <br><br>
+To make Doxygen put <br><br>
 <code>
 \#include \<path/include.h\>
 </code>
@@ -135,7 +135,7 @@ To make doxygen put <br><br>
 in the documentation of the class MyClassName regardless of the name of the actual
 header file in which the definition of MyClassName is contained.
 
-If you want doxygen to show that the include file should be included using
+If you want Doxygen to show that the include file should be included using
 quotes instead of angle brackets you should type:
 \verbatim
 /*! \class MyClassName myhdr.h "path/myhdr.h"
@@ -176,15 +176,15 @@ put in your own header file by writing your own header and feed that to
 \section faq_html_header The overall HTML output looks different, while I only wanted to use my own html header file
 
 You probably forgot to include the stylesheet <code>doxygen.css</code> that
-doxygen generates. You can include this by putting
+Doxygen generates. You can include this by putting
 \verbatim
 <LINK HREF="doxygen.css" REL="stylesheet" TYPE="text/css">
 \endverbatim
 in the HEAD section of the HTML page.
 
-\section faq_use_qt Why does doxygen use Qt?
+\section faq_use_qt Why does Doxygen use Qt?
 
-In the past (prior to version 1.9.2) doxygen used a part of Qt 2.x for various
+In the past (prior to version 1.9.2) Doxygen used a part of Qt 2.x for various
 utility classes. These have been replaced by STL container classes in the meantime.
 
 The GUI front-end called Doxywizard is based on a modern version of Qt.
@@ -203,17 +203,17 @@ EXCLUDE_PATTERNS = */test/*
 Put a \% in front of the class name. Like this: \%MyClass. Doxygen will then
 remove the % and keep the word unlinked.
 
-\section faq_pgm_X My favorite programming language is X. Can I still use doxygen?
+\section faq_pgm_X My favorite programming language is X. Can I still use Doxygen?
 
-No, not as such; doxygen needs to understand the structure of what it reads.
+No, not as such; Doxygen needs to understand the structure of what it reads.
 If you don't mind spending some time on it, there are several options:
 - If the grammar of X is close to C or C++, then it is probably not too hard to
   tweak \c src/scanner.l a bit so the language is supported. This is done
-  for all other languages directly supported by doxygen
+  for all other languages directly supported by Doxygen
   (i.e. Java, IDL, C#, PHP).
 - If the grammar of X is somewhat different than you can write an input
   filter that translates X into something similar enough to C/C++ for
-  doxygen to understand (this approach is taken for VB, Object Pascal, and
+  Doxygen to understand (this approach is taken for VB, Object Pascal, and
   JavaScript, see https://www.doxygen.org/helpers.html).
 - If the grammar is completely different one could write a parser for X and
   write a backend that produces a similar syntax tree as is done by
@@ -221,7 +221,7 @@ If you don't mind spending some time on it, there are several options:
 
 \section faq_lex Help! I get the cryptic message "input buffer overflow, can't enlarge buffer because scanner uses REJECT"
 
-This error happens when doxygen's lexical scanner has a rule that matches
+This error happens when Doxygen's lexical scanner has a rule that matches
 more than 256K of input characters in one go. I've seen this happening
 on a very large generated file (\>256K lines), where the built-in preprocessor
 converted it into an empty file (with \>256K of newlines). Another case
@@ -254,9 +254,9 @@ option \ref cfg_builtin_stl_support "BUILTIN_STL_SUPPORT" is turned on.
 
 Please read <a href="searching.html">this</a> for hints on where to look.
 
-\section faq_cmdline Can I configure doxygen from the command line?
+\section faq_cmdline Can I configure Doxygen from the command line?
 
-Not via command line options, but doxygen can read from <code>stdin</code>,
+Not via command line options, but Doxygen can read from <code>stdin</code>,
 so you can pipe things through it. Here's an example how to override an option
 in a configuration file from the command line (assuming a UNIX like environment):
 
@@ -275,10 +275,10 @@ For Windows Powershell (checked with version 5.1) the following would do the sam
 &{ type Doxyfile ; echo "PROJECT_NUMBER=1.0" } | doxygen -
 \endverbatim
 
-If multiple options with the same name are specified then doxygen will use
+If multiple options with the same name are specified then Doxygen will use
 the last one. To append to an existing option you can use the += operator.
 
-\section faq_name How did doxygen get its name?
+\section faq_name How did Doxygen get its name?
 
 Doxygen got its name from playing with the words
 documentation and generator.
@@ -292,7 +292,7 @@ At the time I was looking into \c lex and \c yacc, where a lot of things start w
 "yy", so the "y" slipped in and made things pronounceable
 (the proper pronouncement is Docs-ee-gen, so with a long "e").
 
-\section faq_why What was the reason to develop doxygen?
+\section faq_why What was the reason to develop Doxygen?
 
 I once wrote a GUI widget based on the Qt library (it is still available at
 https://sourceforge.net/projects/qdbttabular/ but hasn't been updated since 2002).
@@ -306,10 +306,10 @@ so I started to write my own tool...
 
 \section faq_bin How to prevent interleaved output
 
-When redirecting all the console output of doxygen, i.e. messages and warnings, this can be interleaved or
+When redirecting all the console output of Doxygen, i.e. messages and warnings, this can be interleaved or
 in a non-expected order.
 The, technical, reason for this is that the `stdout` can be buffered.
-It is possible to overcome this by means of the `-b` of doxygen, like e.g `doxygen -b > out.txt 2>&1`.
+It is possible to overcome this by means of the `-b` of Doxygen, like e.g `doxygen -b > out.txt 2>&1`.
 Note this might cost a little more time though.
 
 \htmlonly
