--- a/doc/htmlcmds.dox
+++ b/doc/htmlcmds.dox
@@ -73,11 +73,11 @@ of a HTML tag are passed on to the HTML output only
 <tr><td valign="top">\startendhtmltag{SUB}</td><td valign="top">Starts and ends a piece of text displayed in subscript.</td></tr>
 <tr><td valign="top">\startendhtmltag{SUP}</td><td valign="top">Starts and ends a piece of text displayed in superscript.</td></tr>
 <tr><td valign="top">\startendhtmltag{TABLE}</td><td valign="top">Starts and ends a table.</td></tr>
-<tr><td valign="top">\startendhtmltag{TBODY}</td><td valign="top">Starts and ends a new table body, currently ignored by doxygen.</td></tr>
+<tr><td valign="top">\startendhtmltag{TBODY}</td><td valign="top">Starts and ends a new table body, currently ignored by Doxygen.</td></tr>
 <tr><td valign="top">\startendhtmltag{TD}</td><td valign="top">Starts and ends a new table data element.</td></tr>
 <tr><td valign="top">\startendhtmltag{TH}</td><td valign="top">Starts and ends a new table header.</td></tr>
-<tr><td valign="top">\startendhtmltag{THEAD}</td><td valign="top">Starts and ends a new table header, currently ignored by doxygen.</td></tr>
-<tr><td valign="top">\startendhtmltag{TFOOT}</td><td valign="top">Starts and ends a new table footer, currently ignored by doxygen.</td></tr>
+<tr><td valign="top">\startendhtmltag{THEAD}</td><td valign="top">Starts and ends a new table header, currently ignored by Doxygen.</td></tr>
+<tr><td valign="top">\startendhtmltag{TFOOT}</td><td valign="top">Starts and ends a new table footer, currently ignored by Doxygen.</td></tr>
 <tr><td valign="top">\startendhtmltag{TR}</td><td valign="top">Starts and ends a new table row.</td></tr>
 <tr><td valign="top">\startendhtmltag{TT}</td><td valign="top">Starts and ends a piece of text displayed in a typewriter font.</td></tr>
 <tr><td valign="top">\startendhtmltag{U}</td><td valign="top">Starts and ends a section of underlined text.</td></tr>
