--- a/doc/htmlcmds.dox
+++ b/doc/htmlcmds.dox
@@ -85,12 +85,23 @@ of a HTML tag are passed on to the HTML output only
 <tr><td valign="top">\startendhtmltag{VAR}</td><td valign="top">Starts and ends a piece of text displayed in an italic font.</td></tr>
 </table>
 
-Finally, to put invisible comments inside comment blocks, HTML style
-comments can be used:
-\verbatim
-/*! <!-- This is a comment with a comment block --> Visible text */
-\endverbatim
-The part `<!-- ... -->` will not be shown in the main documentation.<br>
+Finally we have the HTML style comments. 
+- When using the, Doxygen, special HTML style comments, i.e. <code>\<!--! ... --\></code>, it is not seen as comment but as
+  if the `...` part is just in the documentation. This is useful to specify Doxygen commands inside a markdown file like:
+  ```
+  <!--! \page pg1 The page -->
+  ```
+  which will be ignored by regular Markdown processors, but Doxygen will interpret this as if there was written:
+  ```
+        \page pg1 The page 
+  ```
+- To put invisible comments inside comment blocks, the normal HTML style
+  comments can be used:
+  \verbatim
+  /*! <!-- This is a comment with a comment block --> Visible text */
+  \endverbatim
+  The part `<!-- ... -->` will not be shown in the main documentation.
+
 Note: It is explicitly forbidden to use 3 dashes before the closing greater than sign.
 Doxygen won't see that as the closing either and give a warning.
 
